load multiple wallpapers

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -26,3 +26,6 @@ windowrulev2 = workspace silent 10, class:^(Spotify)$
 
 # Optionally start it automatically
 exec-once = spotify-launcher
+
+exec-once = hyprpaper
+exec-once = ~/.config/hypr/wallpaper-changer.sh
