--- a/hypr/.config/hypr/config/defaults.conf
+++ b/hypr/.config/hypr/config/defaults.conf
@@ -7,7 +7,7 @@
 $filemanager = 
 $applauncher = wofi
 $terminal = alacritty
-$idlehandler = swayidle -w timeout 300 'swaylock -f -c 000000' before-sleep 'swaylock -f -c 000000'
+$idlehandler = swayidle -w timeout 300 'pidof hyprlock >/dev/null || hyprlock --immediate' before-sleep 'pidof hyprlock >/dev/null || hyprlock --immediate'
 
 # Screenshots
 $shot-region = grimblast copy area
