--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -4,11 +4,11 @@ source = /home/justin/.cache/wal/colors-hyprland.conf
 background {
     monitor =
     #path = screenshot
-    path = /home/justin/Pictures/wal.png
+    path = ~/wallpapers/kali.jpg
     #color = $background
     blur_passes = 2
     contrast = 1
-    brightness = 0.5
+    brightness = 0.6
     vibrancy = 0.2
     vibrancy_darkness = 0.2
 }
@@ -72,11 +72,12 @@ label {
 # Profile Picture
 image {
     monitor =
-    path = /home/justin/Pictures/profile_pictures/justin_square.png
-    size = 100
-    border_size = 2
-    border_color = $foreground
-    position = 0, -100
+    path = ~/wallpapers/kali-square.jpg
+    size = 200
+    border_size = 4
+    border_color = rgba(255, 255, 255, 0.8)
+    rounding = -1
+    position = 0, 0
     halign = center
     valign = center
 }
@@ -84,7 +85,7 @@ image {
 # Desktop Environment
 image {
     monitor =
-    path = /home/justin/Pictures/profile_pictures/hypr.png
+    path = ~/wallpapers/kali-square.jpg
     size = 75
     border_size = 2
     border_color = $foreground
