udpate wofi to look better

--- a/hypr/.config/hypr/config/decorations.conf
+++ b/hypr/.config/hypr/config/decorations.conf
@@ -8,16 +8,14 @@ source = ~/.config/hypr/config/colors.conf
 
 decoration {
     active_opacity = 1
-    rounding = 4
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    rounding = 6
     blur {
-        size = 15
-        passes = 2 # more passes = more resource intensive.
+        enabled = true
+        size = 25
+        passes = 1
         xray = true
+        new_optimizations = true
     }
-
-    # https://wiki.hyprland.org/Configuring/Variables/#shadow
     shadow {
         enabled = false
     }
