--- a/hypr/.config/hypr/config/windowrules.conf
+++ b/hypr/.config/hypr/config/windowrules.conf
@@ -60,3 +60,8 @@ layerrule = animation slide top, logout_dialog
 layerrule = animation slide down, waybar
 layerrule = animation fade 50%, wallpaper
 # Layers Rules End #
+
+
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+layerrule = dimaround, wofi
