--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -29,3 +29,8 @@ exec-once = spotify-launcher
 
 exec-once = hyprpaper
 exec-once = ~/.config/hypr/wallpaper-changer.sh
+
+
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+layerrule = dimaround, wofi
