--- a/hypr/.config/hypr/config/monitor.conf
+++ b/hypr/.config/hypr/config/monitor.conf
@@ -4,7 +4,7 @@
 
 # Monitor wiki https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = DP-1, 3840x2160@60, 0x0, 1
+monitor =,3840x2160@60,auto,1
 
 
 # If you need to scale things like steam etc, please uncomment these lines.
