launch discord and obsidian on startup

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,15 +21,16 @@ source = ~/.config/hypr/config/windowrules.conf
 ## ~/.config/hypr/config/user-config.conf
 # source = ~/.config/hypr/config/user-config.conf
 
+exec-once = hyprpaper
+exec-once = ~/.config/hypr/wallpaper-changer.sh
+
 # Assign Spotify to workspace 0
 windowrulev2 = workspace silent 10, class:^(Spotify)$
 
 # Optionally start it automatically
 exec-once = spotify-launcher
-
-exec-once = hyprpaper
-exec-once = ~/.config/hypr/wallpaper-changer.sh
-
+exec-once = discord
+exec-once = obsidian
 
 layerrule = blur, wofi
 layerrule = ignorezero, wofi
