add icons for pages when apps are on the page

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ exec-once = ~/.config/hypr/wallpaper-changer.sh
 windowrulev2 = workspace silent 10, class:^(Spotify)$
 
 # Optionally start it automatically
+exec-once = python3 ~/.config/hypr/ws_icons.py
 exec-once = spotify-launcher
 exec-once = discord
 exec-once = obsidian
