fix when i start the computer for all the pages to be filled
also makes it so icons work now

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,15 +17,25 @@ source = ~/.config/hypr/config/monitor.conf
 source = ~/.config/hypr/config/variables.conf
 source = ~/.config/hypr/config/windowrules.conf
 
+# Workspaces
+windowrulev2 = workspace 10 silent, class:^(?i)spotify$
+windowrulev2 = workspace 10 silent, initialclass:^(?i)spotify$
+windowrulev2 = workspace 9  silent, class:^(?i)discord$
+windowrulev2 = workspace 9  silent, initialclass:^(?i)discord$
+windowrulev2 = workspace 8  silent, class:^(?i)(code|code-oss|vscode|vscodium)$
+windowrulev2 = workspace 8  silent, initialclass:^(?i)(code|code-oss|vscode|vscodium)$
+windowrulev2 = workspace 1  silent, class:^(?i)obsidian$
+windowrulev2 = workspace 1  silent, initialclass:^(?i)obsidian$
+windowrulev2 = workspace 2  silent, class:^(?i)zen$
+windowrulev2 = workspace 2  silent, initialclass:^(?i)zen$
+
+
 # Modifying these configs can be done by creating a user defined config in the home directory, e.g.
 ## ~/.config/hypr/config/user-config.conf
 # source = ~/.config/hypr/config/user-config.conf
 
 exec-once = hyprpaper
 exec-once = ~/.config/hypr/wallpaper-changer.sh
-
-# Assign Spotify to workspace 0
-windowrulev2 = workspace silent 10, class:^(Spotify)$
 
 # Optionally start it automatically
 exec-once = python3 ~/.config/hypr/ws_icons.py
