update so it pushes each to the proper workspace

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,20 +22,20 @@ source = ~/.config/hypr/config/windowrules.conf
 # source = ~/.config/hypr/config/user-config.conf
 
 # Workspaces (correct order: "workspace silent <ID>")
-windowrulev2 = workspace silent 1,  class:^(?i)obsidian$
-windowrulev2 = workspace silent 1,  initialclass:^(?i)obsidian$
+windowrulev2 = workspace 1 silent,  class:^(?i)obsidian$
+windowrulev2 = workspace 1 silent,  initialclass:^(?i)obsidian$
 
-windowrulev2 = workspace silent 2,  class:^(?i)zen$
-windowrulev2 = workspace silent 2,  initialclass:^(?i)zen$
+windowrulev2 = workspace 2 silent,  class:^(?i)zen$
+windowrulev2 = workspace 2 silent,  initialclass:^(?i)zen$
 
-windowrulev2 = workspace silent 8,  class:^(?i)(code|code-oss|vscode|vscodium)$
-windowrulev2 = workspace silent 8,  initialclass:^(?i)(code|code-oss|vscode|vscodium)$
+windowrulev2 = workspace 8 silent,  class:^(?i)(code|code-oss|vscode|vscodium)$
+windowrulev2 = workspace 8 silent,  initialclass:^(?i)(code|code-oss|vscode|vscodium)$
 
-windowrulev2 = workspace silent 9,  class:^(?i)discord$
-windowrulev2 = workspace silent 9,  initialclass:^(?i)discord$
+windowrulev2 = workspace 9 silent,  class:^(?i)discord$
+windowrulev2 = workspace 9 silent,  initialclass:^(?i)discord$
 
-windowrulev2 = workspace silent 10, class:^(?i)spotify$
-windowrulev2 = workspace silent 10, initialclass:^(?i)spotify$
+windowrulev2 = workspace 10 silent, class:^(?i)spotify$
+windowrulev2 = workspace 10 silent, initialclass:^(?i)spotify$
 
 exec-once = hyprpaper
 exec-once = ~/.config/hypr/wallpaper-changer.sh
