--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ exec-once = python3 ~/.config/hypr/ws_icons.py
 exec-once = spotify-launcher
 exec-once = discord
 exec-once = obsidian
+exec-once = code
 
 layerrule = blur, wofi
 layerrule = ignorezero, wofi
