--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,6 +20,9 @@ source = ~/.config/hypr/config/windowrules.conf
 # Modifying these configs can be done by creating a user defined config in the home directory, e.g.
 ## ~/.config/hypr/config/user-config.conf
 # source = ~/.config/hypr/config/user-config.conf
+env = MOZ_ENABLE_WAYLAND,1
+env = OZONE_PLATFORM_HINT,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 # Workspaces (correct order: "workspace silent <ID>")
 windowrulev2 = workspace 1 silent,  class:^(?i)obsidian$
