--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -34,6 +34,7 @@
         "custom/storage",
         "memory",
         "cpu",
+        "custom/gpu",
         //"pulseaudio",
         "wireplumber",
         "custom/screenshot_t",
@@ -68,6 +69,17 @@
         "interval": 5,
         "exec": "IFACE=enp0s31f6; RX1=$(cat /sys/class/net/$IFACE/statistics/rx_bytes); sleep 1; RX2=$(cat /sys/class/net/$IFACE/statistics/rx_bytes); BPS=$(( (RX2 - RX1) * 8 )); if [ $BPS -lt 1000 ]; then printf \"%d bps\" $BPS; elif [ $BPS -lt 1000000 ]; then awk \"BEGIN {printf \\\"%.1f Kbps\\\", $BPS/1000}\"; else awk \"BEGIN {printf \\\"%.1f Mbps\\\", $BPS/1000000}\"; fi",
         "on-click": "xdg-open 'https://www.speedtest.net/'"
+    },
+    "custom/gpu": {
+        "return-type": "json",
+        "exec": "~/.config/waybar/modules/gpu_stat.sh",
+        "tail": true,
+        "format": "󰢮  {text}",
+        "tooltip": true,
+        "max-length": 6,
+        "on-click": "alacritty -e nvtop",
+        "on-click-right": "alacritty -e bash -lc 'nvidia-smi dmon -s pucmt -i 0'",
+        "on-click-middle": "nvidia-settings"
     },
     "custom/sp1": {
         "format": " | ",
