login page is perfect

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -30,13 +30,13 @@ input-field {
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    outer_color = rgba(0, 0, 0, 0)
-    inner_color = rgba(0, 0, 0, 0.2)
-    font_color = $foreground
+    outer_color = white
+    inner_color = rgba(255, 255, 255, 0.2)
     fade_on_empty = false
     rounding = -1
     check_color = rgb(204, 136, 34)
-    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+    font_color = rgba(255,255,255,1.0)
+    placeholder_text = <i>Input Password...</i>
     hide_input = false
     position = 0, -200
     halign = center
@@ -67,8 +67,6 @@ label {
   valign = center
 }
 
-
-
 # Profile Picture
 image {
     monitor =
@@ -82,60 +80,33 @@ image {
     valign = center
 }
 
-# Desktop Environment
-image {
-    monitor =
-    path = ~/wallpapers/kali-square.jpg
-    size = 75
-    border_size = 2
-    border_color = $foreground
-    position = -50, 50
-    halign = right
-    valign = bottom
-}
-
 # CURRENT SONG
 label {
     monitor =
-    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/whatsong.sh)" 
-    color = $foreground
-    #color = rgba(255, 255, 255, 0.6)
+    text = cmd[update:1000] $HOME/.config/hypr/scripts/whatsong.sh
+    color = purple
     font_size = 18
     font_family = Metropolis Light, Font Awesome 6 Free Solid
-    position = 0, 50
+    position = 0, 150
     halign = center
     valign = bottom
 }
 
 label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/whoami.sh)"
-    color = $foreground
-    font_size = 14
-    font_family = JetBrains Mono
-    position = 0, -10
-    halign = center
-    valign = top
+  text = cmd[update:1000] $HOME/.config/hypr/scripts/capslock.sh
+  color = rgba(255, 90, 90, 0.95)
+  font_size = 16
+  font_family = JetBrains Mono Bold
+  position = 0, -150
+  halign = center
+  valign = center
 }
 
 label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/battery.sh)"
-    color = $foreground
-    font_size = 24
-    font_family = JetBrains Mono
-    position = -90, -10
-    halign = right
-    valign = top
-}
-
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/network-status.sh)"
-    color = $foreground
-    font_size = 24
-    font_family = JetBrains Mono
-    position = -20, -10
-    halign = right
-    valign = top
+  text = cmd[update:1000] $HOME/.config/hypr/scripts/weather.sh
+  color = rgba(136,192,208,0.95)
+  font_size = 16
+  position = 0, 90
+  halign = center
+  valign = bottom
 }
