--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -66,9 +66,10 @@
     },
     "custom/download_speed": {
         "format": "↓ {}",
-        "interval": 5,
-        "exec": "IFACE=enp0s31f6; RX1=$(cat /sys/class/net/$IFACE/statistics/rx_bytes); sleep 1; RX2=$(cat /sys/class/net/$IFACE/statistics/rx_bytes); BPS=$(( (RX2 - RX1) * 8 )); if [ $BPS -lt 1000 ]; then printf \"%d bps\" $BPS; elif [ $BPS -lt 1000000 ]; then awk \"BEGIN {printf \\\"%.1f Kbps\\\", $BPS/1000}\"; else awk \"BEGIN {printf \\\"%.1f Mbps\\\", $BPS/1000000}\"; fi",
-        "on-click": "xdg-open 'https://www.speedtest.net/'"
+        "exec": "~/.config/waybar/modules/net_speed.sh enp0s31f6",
+        "tail": true,
+        "on-click": "xdg-open 'https://www.speedtest.net/'",
+        "on-click-right": "bash -lc '~/.config/waybar/modules/net_speed.sh refresh enp0s31f6 && notify-send \"Max DL updated\"'"
     },
     "custom/gpu": {
         "return-type": "json",
