--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,112 +1,54 @@
-source = /home/justin/.cache/wal/colors-hyprland.conf
+general { disable_loading_bar = true }
 
-# BACKGROUND
 background {
-    monitor =
-    #path = screenshot
-    path = ~/wallpapers/kali.jpg
-    #color = $background
-    blur_passes = 2
-    contrast = 1
-    brightness = 0.6
-    vibrancy = 0.2
-    vibrancy_darkness = 0.2
-}
-
-# GENERAL
-general {
-    no_fade_in = true
-    no_fade_out = true
-    hide_cursor = false
-    grace = 0
-    disable_loading_bar = true
-}
-
-# INPUT FIELD
-input-field {
-    monitor =
-    size = 250, 60
-    outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    outer_color = white
-    inner_color = rgba(255, 255, 255, 0.2)
-    fade_on_empty = false
-    rounding = -1
-    check_color = rgb(204, 136, 34)
-    font_color = rgba(255,255,255,1.0)
-    placeholder_text = <i>Input Password...</i>
-    hide_input = false
-    position = 0, -200
-    halign = center
-    valign = center
-}
-
-# DATE
-label {
   monitor =
-  text = cmd[update:1000] echo "$(date +"%A, %B %d")"
-  color = rgba(242, 243, 244, 0.75)
+  path = ~/Pictures/red_corvette.jpg
+  blur_passes = 3
+  blur_size = 8
+}
+
+label { # Time
+  monitor = DP-3
+  text = cmd[update:1000] /usr/bin/date +"%H:%M:%S"
+  font_size = 72
+  position = 0, 120
+  halign = center
+  valign = center
+}
+
+label { # Date
+  monitor = DP-3
+  text = cmd[update:1000] date +"%a %b %d, %Y"
   font_size = 22
   font_family = JetBrains Mono
-  position = 0, 300
+  position = 0, 40
   halign = center
   valign = center
 }
 
-# TIME
-label {
-  monitor = 
-  text = cmd[update:1000] echo "$(date +"%-I:%M")"
-  color = rgba(242, 243, 244, 0.75)
-  font_size = 95
+label { # Weather
+  monitor = DP-3
   font_family = JetBrains Mono Extrabold
-  position = 0, 200
+  text = cmd[update:600000] ~/.config/hypr/scripts/lock_weather.sh
+  font_size = 18
+  position = 0, -40
   halign = center
   valign = center
 }
 
-# Profile Picture
-image {
-    monitor =
-    path = ~/wallpapers/kali-square.jpg
-    size = 200
-    border_size = 4
-    border_color = rgba(255, 255, 255, 0.8)
-    rounding = -1
-    position = 0, 0
-    halign = center
-    valign = center
-}
-
-# CURRENT SONG
-label {
-    monitor =
-    text = cmd[update:1000] $HOME/.config/hypr/scripts/whatsong.sh
-    color = purple
-    font_size = 18
-    font_family = Metropolis Light, Font Awesome 6 Free Solid
-    position = 0, 150
-    halign = center
-    valign = bottom
-}
-
-label {
-  text = cmd[update:1000] $HOME/.config/hypr/scripts/capslock.sh
-  color = rgba(255, 90, 90, 0.95)
-  font_size = 16
-  font_family = JetBrains Mono Bold
-  position = 0, -150
+label { # Spotify
+  monitor = DP-3
+  text = cmd[update:2000] ~/.config/hypr/scripts/lock_spotify.sh
+  font_size = 18
+  position = 0, -80
   halign = center
   valign = center
 }
 
-label {
-  text = cmd[update:1000] $HOME/.config/hypr/scripts/weather.sh
-  color = rgba(136,192,208,0.95)
-  font_size = 16
-  position = 0, 90
+input-field {
+  monitor = DP-3
+  size = 400, 64
+  position = 0, -160
   halign = center
-  valign = bottom
+  valign = center
 }
