--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -48,7 +48,8 @@ $menu = wofi
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar
+exec-once = hyprpaper
 exec-once = hypridle
 
 #############################
