add screenshots to folder

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -256,8 +256,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, I, exec, wofi --show drun
-bind = , Print, exec, sh -c 'file=~/Pictures/screenshots/screenshot_$(date +%F_%T).png; grim - | tee "$file" | wl-copy'
-bind = $mainMod SHIFT, S, exec, sh -c 'file=~/Pictures/screenshots/screenshot_$(date +%F_%T).png; grim -g "$(slurp)" - | tee "$file" | wl-copy'
+bind = , Print, exec, sh -c 'file=~/Pictures/screenshots/screenshot_$(date +%F_%T).png; grim - | tee "$file" | wl-copy; notify-send "Screenshot saved" "$file"'
+bind = $mainMod SHIFT, S, exec, sh -c 'file=~/Pictures/screenshots/screenshot_$(date +%F_%T).png; grim -g "$(slurp)" - | tee "$file" | wl-copy; notify-send "Screenshot saved" "$file"'
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
