make windows key to open wofi

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -255,7 +255,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, I, exec, wofi --show drun
+bind = $mainMod, SUPER_L, exec, wofi --show drun
 bind = , Print, exec, sh -c 'file=~/Pictures/screenshots/screenshot_$(date +%F_%T).png; grim - | tee "$file" | wl-copy; notify-send "Screenshot saved" "$file"'
 bind = $mainMod SHIFT, S, exec, sh -c 'file=~/Pictures/screenshots/screenshot_$(date +%F_%T).png; grim -g "$(slurp)" - | tee "$file" | wl-copy; notify-send "Screenshot saved" "$file"'
 
